<resources>
    <string name="app_name">GastoViagem</string>
    <string name="distancia">Distância</string>
    <string name="total_de_km">Total de quilômetros</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="km_por_litro">Km por litro</string>
    <string name="seu_gasto_total">Seu gasto total é de:</string>
    <string name="total_valor">R$ 0</string>
    <string name="calcular">Calcular</string>

    <string name="validation_fill_all_fields">Preencha todos os campos.</string>
</resources>